--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "杨少扬 <shaoyang.yang@casstime.com>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js"
   },
   "dependencies": {
     "vue": "^2.5.3",
@@ -19,6 +19,7 @@
     "babel-loader": "^6.0.0",
     "babel-preset-env": "^1.6.1",
     "cross-env": "^5.1.1",
+    "html-webpack-plugin": "2.30.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
